chore(refactor): clean up handlers dir structure
