# src/interface/api.yaml
@@ -3018,6 +3018,7 @@ components:
         - transactionId
         - transactionRequestState
         - transactionState
+    # TODO: fix this... I'm not sure why it's broken
     ThirdpartyRequestsAuthorizationsPostRequest:
       title: ThirdpartyRequestsAuthorizationsPostRequest
       description: POST /thirdpartyRequests/authorizations request object.
@@ -3025,58 +3026,58 @@ components:
       properties:
         authorizationRequestId:
           $ref: '#/components/schemas/CorrelationId'
-        transactionRequestId:
-          $ref: '#/components/schemas/CorrelationId'
-        challenge:
-          type: string
-          description: The challenge that the PISP's client is to sign
-        transferAmount:
-          $ref: '#/components/schemas/Money'
-          description: >-
-            The amount that will be debited from the sending customer’s  account
-            as a consequence of the transaction.
-        payeeReceiveAmount:
-          $ref: '#/components/schemas/Money'
-          description: >-
-            The amount that will be credited to the receiving customer’s 
-            account as a consequence of the transaction.
-        fees:
-          $ref: '#/components/schemas/Money'
-          description: >-
-            The amount of fees that the paying customer will be charged as part
-            of the transaction.
-        payer:
-          allOf:
-            - $ref: '#/components/schemas/PartyIdInfo'
-          description: >-
-            Information about the Payer type, id, sub-type/id, FSP Id in the
-            proposed financial transaction.
-        payee:
-          allOf:
-            - $ref: '#/components/schemas/Party'
-          description: Information about the Payee in the proposed financial transaction.
-        transactionType:
-          $ref: '#/components/schemas/TransactionType'
-        expiration:
-          $ref: '#/components/schemas/DateTime'
-          description: >-
-            The time by which the transfer must be completed, set by the payee
-            DFSP.
-        extensionList:
-          $ref: '#/components/schemas/ExtensionList'
-          description: 'Optional extension, specific to deployment.'
-      required:
-        - authorizationRequestId
-        - transactionRequestId
-        - challenge
-        - transferAmount
-        - payeeReceiveAmount
-        - fees
-        - payer
-        - payee
-        - transactionType
-        - expiration
-      additionalProperties: false
+      #   transactionRequestId:
+      #     $ref: '#/components/schemas/CorrelationId'
+      #   challenge:
+      #     type: string
+      #     description: The challenge that the PISP's client is to sign
+      #   transferAmount:
+      #     $ref: '#/components/schemas/Money'
+      #     description: >-
+      #       The amount that will be debited from the sending customer’s  account
+      #       as a consequence of the transaction.
+      #   payeeReceiveAmount:
+      #     $ref: '#/components/schemas/Money'
+      #     description: >-
+      #       The amount that will be credited to the receiving customer’s 
+      #       account as a consequence of the transaction.
+      #   fees:
+      #     $ref: '#/components/schemas/Money'
+      #     description: >-
+      #       The amount of fees that the paying customer will be charged as part
+      #       of the transaction.
+      #   payer:
+      #     allOf:
+      #       - $ref: '#/components/schemas/PartyIdInfo'
+      #     description: >-
+      #       Information about the Payer type, id, sub-type/id, FSP Id in the
+      #       proposed financial transaction.
+      #   payee:
+      #     allOf:
+      #       - $ref: '#/components/schemas/Party'
+      #     description: Information about the Payee in the proposed financial transaction.
+      #   transactionType:
+      #     $ref: '#/components/schemas/TransactionType'
+      #   expiration:
+      #     $ref: '#/components/schemas/DateTime'
+      #     description: >-
+      #       The time by which the transfer must be completed, set by the payee
+      #       DFSP.
+      #   extensionList:
+      #     $ref: '#/components/schemas/ExtensionList'
+      #     description: 'Optional extension, specific to deployment.'
+      # required:
+      #   - authorizationRequestId
+      #   - transactionRequestId
+      #   - challenge
+      #   - transferAmount
+      #   - payeeReceiveAmount
+      #   - fees
+      #   - payer
+      #   - payee
+      #   - transactionType
+      #   - expiration
+      # additionalProperties: false
     SignedPayloadTypeFIDO:
       title: SignedPayloadTypeFIDO
       type: string
